[package]
authors = ["roblabla"]
build = "build.rs"
description = "Bindings to Disk Arbitration for OS X"
homepage = "https://github.com/roblabla/diskarbitration-rs"
license = "MIT"
links = "DiskArbitration.framework"
name = "diskarbitration-sys"
repository = "https://github.com/roblabla/diskarbitration-rs"
version = "0.0.2"

[dependencies]
core-foundation-sys = "0.2.2"
libc = "0.2.18"
